Updated links to all Style Guides

--- a/docs/sql/sfmc-sql-style-guide.mdx
+++ b/docs/sql/sfmc-sql-style-guide.mdx
@@ -593,5 +593,5 @@ If you want to share something I'm missing or have arguments for a different rec
 
 Looking for more Marketing Cloud style? Check out my:
 
-- [SSJS Style Guide](../ssjs/ssjs-style-guide.mdx).
-- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx).
+- [SSJS Style Guide](../ssjs/ssjs-style-guide.mdx)
+- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx)
