--- a/docs/ssjs/ssjs-style-guide.mdx
+++ b/docs/ssjs/ssjs-style-guide.mdx
@@ -417,18 +417,18 @@ For complex scripts, it might be a good idea to create few different levels of s
 
 /* ---------------------- 3. AUTHENTICATION FLOW -------------------- */
 
-/* ---------------------- 3.1. Authorization ------------------------ */
+/* ---------------------- 3.1. Authorisation ------------------------ */
 
 /* ---------------------- 3.2. Authentication ----------------------- */
 
 /* 3.2.1. Build token request payload */
 ```
 
-### 3. Documenation Comments
+### 3. Documentation Comments
 
 Two previous comment types are suitable for high-level view and organisation of your more complex scripts. But the essential type of comment is the one that goes into detail about the implementation - the documentation comments.
 
-You should use one for every custom function you create, but it might also benefit variables (especially those that have values coming from an API response). Rule of thumb - add them whenever someone else reading your code for the first time would ask a question about context or purpose.
+You should use one for every custom function you create, but it might also benefit variables (especially those with values coming from an API response). Rule of thumb - add them whenever someone else reading your code for the first time would ask a question about context or purpose.
 
 I recommend using [JSDoc](https://jsdoc.app/index.html) for few reasons:
 
@@ -487,5 +487,5 @@ If you want to share something I'm missing or have arguments for a different rec
 
 Looking for more Marketing Cloud style? Check out my:
 
-- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx).
-- [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx).
+- [AMPScript Style Guide](../ampscript/ampscript-style-guide.mdx)
+- [SFMC SQL Style Guide](../sql/sfmc-sql-style-guide.mdx)
