--- a/docs/ssjs/ssjs-if-and-switch.mdx
+++ b/docs/ssjs/ssjs-if-and-switch.mdx
@@ -155,7 +155,7 @@ The ternary has more uses not than just the standard `if` statement. It is aweso
 Write('You are ' + (isOptedIn ? 'opted in' : 'not opted in'));
 ```
 
-Ternaries are not limited to variables and strings. They can also run functions or [debugging](./debugging-ssjs#debugging-variable):
+Ternaries are not limited to variables and strings. They can also run functions or [debugging](./debugging-ssjs.mdx#debugging-variable):
 
 ```js title="If isLoggedIn is false, the redirectToLogInPage function will be executed"
 !isLoggedIn ? redirectToLogInPage() : null;
