--- a/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
+++ b/docs/ssjs/ssjs-snippet-ampscript-in-ssjs.mdx
@@ -18,7 +18,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 ## Problem with missing SSJS functions
 
-SSJS language has many features missing from AMPScript - [try/catch blocks](../ssjs/debugging-ssjs#try-to-catch-the-error), arrays and objects to mention the most used ones. But some things are available only in AMPScript.
+SSJS language has many features missing from AMPScript - [try/catch blocks](../ssjs/debugging-ssjs.mdx#try-to-catch-the-error), arrays and objects to mention the most used ones. But some things are available only in AMPScript.
 
 Some, like `ProperCase` function, can be recreated in SSJS with a bit of RegEx creativity. Other, like `RetrieveSalesforceObjects`, cannot (unless you decide on building custom wrappers around Salesforce API).
 
