--- a/docs/usecase/sfmc-cloud-apps.mdx
+++ b/docs/usecase/sfmc-cloud-apps.mdx
@@ -534,7 +534,7 @@ There was much information to digest, so it's time for a streamlined step by ste
 
 1. __Logging Data Extensions__
     1. In Content Builder or Email Studio create a [Cloud App Logging Data Extension](#capture-your-cloud-app-usage).
-    2. In Content Builder or Email Studio create an [Error Logging Data Extension](../ssjs/debugging-ssjs#logging-to-data-extension).
+    2. In Content Builder or Email Studio create an [Error Logging Data Extension](../ssjs/debugging-ssjs.mdx#logging-to-data-extension).
     3. In both cases, one is enough for multiple Cloud Apps. If stored in the Shared Data Extensions folder, both can serve multiple Business Units.
 2. __Cloud Page__
     1. Create a new Cloud Page.
