--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -16,9 +16,9 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 :::
 
-The `SELECT` statement opens each query. It both defines the columns of data extensions and system data views that will be needed, as well as allows you to create entirely new data points.
+The `SELECT` statement opens each query. It picks the columns from the source data extensions and system data views and allows you to create entirely new data points.
 
-The simplest version of this statement is `SELECT *`, which targets all available columns from the source. I do not recommend this approach, as it is terrible for both readability and performance of your query. As Salesforce Marketing Cloud caches the source Data Extension column names when you save SQL Query Activity, you won't have added value of flexible selection. You will still have to edit and save the activity. Also, [Query Studio](./sfmc-sql-basics.mdx#query-studio) does not support this shortcut. Don't use `*`.
+The simplest version of this statement is `SELECT *`, which targets all available columns from the source. I do not recommend this approach, as it is terrible for your query's readability and performance. As Salesforce Marketing Cloud caches the source Data Extension column names when you save SQL Query Activity, you won't have added value of flexible selection. You will still have to edit and save the activity. Also, [Query Studio](./sfmc-sql-basics.mdx#query-studio) does not support this shortcut. Don't use `*`.
 
 The prefered method is targeting columns explicitly by their names:
 
@@ -37,7 +37,7 @@ SELECT
     , [External Contact Id]
 ```
 
-There are also some exceptional cases related to selected [System Data Views](../config/sfmc-config-system-data-views.mdx) in Salesforce Marketing Cloud, where you need to use an underscore prefix before a name (for example when taking Subscriber ID from Enterprise Attributes):
+There are also some exceptional cases related to selected [System Data Views](../config/sfmc-config-system-data-views.mdx) in Salesforce Marketing Cloud, where you need to use an underscore prefix before a name (for example, when taking Subscriber ID from Enterprise Attributes):
 
 ```sql title="There are some special column names with an underscore prefix"
 SELECT _SubscriberId
@@ -45,7 +45,7 @@ SELECT _SubscriberId
 
 ## Aliasing with AS
 
-You can also utilize `SELECT` as a tool to rename the source columns to match your needs in an outcome data extension. It is especially useful when you are pulling the data from Synchronized Data Extension with names coming from Salesforce custom fields.
+You can also utilise `SELECT` as a tool to rename the source columns to match your needs in an outcome data extension. It is especially useful when pulling the data from Synchronized Data Extension with names coming from Salesforce custom fields.
 
 ```sql {4-5} title="Improve readability and consistency with aliasing"
 SELECT
@@ -57,7 +57,7 @@ SELECT
 
 ### Custom values
 
-Use aliases also for passing new values directly from your query. Need to add a custom string to outcome data extension? Or maybe synchronization timestamp for debugging purposes? You can leverage SQL for it.
+Use aliases also for passing new values directly from your query. Need to add a custom string to outcome data extension? Or maybe synchronisation timestamp for debugging purposes? You can leverage SQL for it.
 
 ```sql {6-7} title="Add custom column aliased 'ImportDate' with a value equal to the UTC of the script execution for each record"
 SELECT
@@ -73,7 +73,7 @@ SELECT
 
 You can even go further by creating new values by leveraging existing data! For example, if you have a first name and last name, you can use SQL to create a FullName column from scratch:
 
-```sql {4} title="Let's create a concatenated column for easier personalization"
+```sql {4} title="Let's create a concatenated column for easier personalisation"
 SELECT
       SubscriberKey
     , EmailAddress
@@ -86,7 +86,7 @@ It becomes mighty with the [SQL String functions](./sfmc-sql-string-functions.md
 
 ## Conditional values with CASE
 
-`CASE` statement evaluates a list of conditions and returns one of the multiple possible result expressions. For Marketing Cloud purposes, it is especially useful when you not only want to select a column but also modify the values within it. Perfect for translating numeric codes to descriptive ones for personalization purposes. Excellent for standardizing data (change those `1`, `true` and `on` values of opt-in to a single format).
+`CASE` statement evaluates a list of conditions and returns one of the multiple possible result expressions. For Marketing Cloud purposes, it is especially useful when you want to select a column and modify the values within it. Perfect for translating numeric codes to descriptive ones for personalisation purposes. Excellent for standardising data (change those `1`, `true` and `on` values of opt-in to a single format).
 
 ```sql {8-14}
 SELECT
@@ -105,7 +105,7 @@ SELECT
       END
 ```
 
-You can have as many `WHEN`/`THEN` conditions as you want. Also, the `ELSE` statement is optional, but a good idea to catch unexpected values.
+You can have as many `WHEN`/`THEN` conditions as you want. Also, the `ELSE` statement is optional but a good idea to catch unexpected values.
 
 Feel free also to leverage [aliases](#aliasing-with-as) to manipulate the column name at the same time:
 
@@ -128,7 +128,7 @@ SELECT
 
 ### Search version of CASE
 
-Above examples are already useful in segmentation, but there is also one more way to write and use `CASE` statement that gives even more power. The search `CASE`.
+The above examples are already helpful in segmentation, but there is also one more way to write and use a `CASE` statement that gives even more power. The search `CASE`.
 
 The difference is that you are not passing the column name on which you will be building conditions. Instead, you create a boolean expression from scratch for each scenario.
 
@@ -149,7 +149,7 @@ SELECT
       END                   AS MemberType
 ```
 
-The example above doesn't show why it is worth to use the search `CASE`. It is a bit longer than the standard approach! But there is a reason to use this form of `CASE` statement that is visible once you want to create more elaborate conditions that are possible only with this version:
+The example above doesn't show why it is worth using the search `CASE`. It is a bit longer than the standard approach! But there is a reason to use this form of `CASE` statement that is visible once you want to create more elaborate conditions that are possible only with this version:
 
 ```sql {3-7} title="Let's calculate what channel we should use in our campaign for a given user"
 SELECT
@@ -163,13 +163,13 @@ SELECT
 
 :::note You Should Know
 
-`CASE` statement returns `THEN` value of the first condition that evaluated to `TRUE`. It means that in the above example if the `IsAppInstalled = 1` is true, other conditions are not considered. Even if for selected contact all of them will be true, it will still have the value `Push` in PreferredChannel. It is perfect, as it allows us to prioritize cheaper channels.
+`CASE` statement returns `THEN` value of the first condition that evaluated to `TRUE`. In the above example, if the `IsAppInstalled = 1` is true, other conditions are not considered. Even if for selected contact all of them will be true, it will still have the value `Push` in PreferredChannel. It is perfect, as it allows us to prioritise cheaper channels.
 
-Always consider the order of the conditions in your `CASE` statement. It both might lead to errors if you don't expect behaviour mentioned above, as well as make your life much easier if you know it works that way.
+Always consider the order of the conditions in your `CASE` statement. It both might lead to errors if you don't expect the behaviour mentioned above and make your life much easier if you know it works that way.
 
 :::
 
-As you can see, thanks to search `CASE` statement we were able to check conditions on multiple different columns and connect them with `AND`/`OR` statements for better control. You can use this version of the `CASE` statement for all your needs (even those covered by the basic one) to worry not about two ways of formatting.
+As you can see, thanks to search `CASE` statements, we can check conditions on multiple different columns and connect them with `AND`/`OR` statements for better control. You can use this version of the `CASE` statement for all your needs (even those covered by the basic one) to not worry about two ways of formatting.
 
 :::note You Should Know
 
@@ -198,7 +198,7 @@ SELECT
 
 ### LIKE in CASE
 
-`LIKE` is not only useful in the [`WHERE` Statement](./sfmc-sql-where.mdx#like-operator). It is also an awesome tool empowering `CASE` statement. It allows you to build flexible conditions on free text values:
+`LIKE` is not only valuable for the [`WHERE` Statement](./sfmc-sql-where.mdx#like-operator). It is also an incredible tool empowering the `CASE` statement. It allows you to build flexible conditions on free text values:
 
 ```sql {4} title="Great way to split your database between Internal and External users for different communication"
 SELECT
@@ -209,17 +209,17 @@ SELECT
       END AS ContactType
 ```
 
-In the `SELECT` statement, the `LIKE` operator is especially useful for fixing data coming from the free text fields. To learn more about the possibilities, check out the [`LIKE` guide](./sfmc-sql-like.mdx).
+In the `SELECT` statement, the `LIKE` operator is handy for fixing data coming from the free text fields. To learn more about the possibilities, check out the [`LIKE` guide](./sfmc-sql-like.mdx).
 
 ### IIF Shorthand
 
-`CASE` statement is an awesome tool, but can be overkill for simple conditions. This is where `IIF` comes to the rescue.
+The `CASE` statement is a fantastic tool but can be overkill for simple conditions. The `IIF` comes to the rescue.
 
 It takes three arguments:
 
 1. Condition
-2. Value returned if the condition evaluates to true
-3. Value returned if the condition evaluates to false
+2. The value returned if the condition evaluates to true
+3. The value returned if the condition evaluates to false
 
 With it, instead of multiline `CASE`:
 
@@ -244,9 +244,9 @@ Whenever you have a single condition - go with `IIF`.
 
 :::note You Should Know
 
-Both `CASE` and `IIF` can be taken to the next level with dynamic values. You don't have to use a string, integer or boolean. You can pass a column name.
+You can take both `CASE` and `IIF` to the next level with dynamic values. Don't limit yourself to a string, integer or boolean - pass a column name.
 
-Use case? Think of a Master Data Extension that stores huge amount of contact information, including preferred channel (Email or Mobile). With dynamic values and `IIF` in just few lines we can create optimised Data Extension with crucial information:
+Use case? Think of a Master Data Extension that stores a massive amount of contact information, including preferred channel (Email or Mobile). With dynamic values and `IIF` in just a few lines, we can create an optimised Data Extension with crucial information:
 
 ```sql {4}
 SELECT
@@ -255,13 +255,13 @@ SELECT
     , IIF(PreferredChannel = 'Email', EmailAddress, MobileNumber) AS PointOfContact
 ```
 
-Now, even with just three columns in your Entry Point, you can create Journey that adapts the channel to customer preferences.
+Now, even with just three columns in your Entry Point, you can create a Journey that adapts the channel to customer preferences.
 
 :::
 
 ## TOP
 
-`TOP` clause can be added to your `SELECT` statement to limit the number of rows returned by your query.
+You can add a `TOP` clause to your `SELECT` statement to limit the number of rows returned by your query.
 
 ```sql {1} title="Returns 10 rows"
 SELECT TOP 10
@@ -272,7 +272,7 @@ SELECT TOP 10
 
 ### TOP PERCENT
 
-`TOP` clause is not limited to an integer, you can also ask for specific percent of rows with `PERCENT` modifier:
+The `TOP` clause is not limited to an integer; you can also ask for a specific per cent of rows with `PERCENT` modifier:
 
 ```sql {1}
 SELECT TOP 10 PERCENT
@@ -291,9 +291,9 @@ The number of rows will be rounded up to the nearest integer (so `TOP 50 PERCENT
 
 ### TOP with ORDER BY
 
-`TOP` clause best practice is to always use it with `ORDER BY`. Only with sorted data you will know what is the logic behind selecting rows.
+The `TOP` clause best practice is to always use it with `ORDER BY`. Only with sorted data, you will understand rows selection logic.
 
-To sort outcomes of your query, add `ORDER BY` at the end along with column(s) that should be used for sorting.
+To sort outcomes of your query, add `ORDER BY` at the end - along with column(s) that used for sorting.
 
 ```sql {4} title="Top 10% with the lowest Quiz Score"
 SELECT TOP 10 PERCENT
@@ -313,11 +313,11 @@ ORDER BY QuizScore DESC
 
 :::note You Should Know
 
-`ORDER BY` sorts Text fields alphabetically. This might surprise you if you store some numbers in such field type, as it will order `10` before `2`.
+`ORDER BY` sorts Text fields alphabetically. It might surprise you if you store numbers in such field type, as it will order `10` before `2`.
 
-The best solution is to use appropriate field type for numbers. However, if for whatever reason you cannot do it, leverage [`CONVERT`](./sfmc-sql-conversion-functions.mdx#convert):
+The best solution is to use the appropriate field type for numbers. However, if for whatever reason you cannot do it, leverage [`CONVERT`](./sfmc-sql-conversion-functions.mdx#convert):
 
-```sql {4} title="Top 10% with highest Quiz Score if QuizScore is Text field"
+```sql {4} title="Top 10% with highest Quiz Score if QuizScore is a Text field"
 SELECT TOP 10 PERCENT
       SubscriberKey
     , QuizScore
@@ -326,9 +326,9 @@ ORDER BY CONVERT(INT, QuizScore) DESC
 
 :::
 
-`ORDER BY` can operate not only on selected column. You already saw above that you can use expression (even [`CASE`](#conditional-values-with-case)!) to calculate the sorting value, but it's much more flexible.
+`ORDER BY` can operate not only on the selected column. You already saw above that you can use expression (even [`CASE`](#conditional-values-with-case)!) to calculate the sorting value, but it's much more flexible.
 
-You can sort using a column that was not selected:
+You can sort using a column not picked in `SELECT`:
 
 ```sql {3} title="Top 10% with highest Quiz Score, without returning the score"
 SELECT TOP 10 PERCENT
@@ -347,7 +347,7 @@ ORDER BY Points DESC
 
 And you can even sort using multiple values - each can have different sorting order.
 
-SQL will sort using first provided column and then, while mantaining the order of the previous column, will sort again using the next value. This may sound complicated, so let's jump to an example:
+SQL will sort using the first provided column and then, while maintaining the order of the previous column, will sort again using the next value. Let's jump to an example:
 
 ```sql {4} title="Top 10% with highest Quiz Score, first to solve"
 SELECT TOP 10 PERCENT
@@ -356,7 +356,7 @@ SELECT TOP 10 PERCENT
 ORDER BY QuizScore DESC, QuizFilledDate ASC
 ```
 
-Query will first sort using QuizScore to find people with the most points. Next, it will apply second sort on the date of quiz completion. As an outcome, we will have the highest scorers sorted from first to last within each high score.
+The query will first sort using QuizScore to find people with the most points. Next, it will apply the second sort on the date of quiz completion. As an outcome, we will have the highest scorers sorted from first to last within each high score.
 
 ### TOP WITH TIES
 
@@ -389,16 +389,16 @@ PIL | 96
 UDO | 96
 SDJ | 96
 
-What can we do to capture everyone with the score good enough for the Top 3 status? `WITH TIES` will help:
+What can we do to capture everyone with a score good enough for the Top 3 status? `WITH TIES` will help:
 
-```sql title="Despite asking for TOP 3 it will return 5 rows due to ties"
+```sql title="Despite asking for TOP 3, it will return 5 rows due to ties"
 SELECT TOP 3 WITH TIES
     SubscriberKey
     , QuizScore
 ORDER BY QuizScore DESC
 ```
 
-With those two words added after the `TOP` clause, our query will return all rows that match the sorted value in the last row. This, however, means that the number of outcomes is not set in stone, so be sure to prepare your next steps for that uncertainity.
+With those two words added after the `TOP` clause, our query will return all rows that match the sorted value in the last row. It, however, means that the number of outcomes is not set in stone, so be sure to prepare your next steps for that uncertainty.
 
 :::note You Should Know
 
@@ -408,9 +408,9 @@ With those two words added after the `TOP` clause, our query will return all row
 
 ## DISTINCT
 
-`DISTINCT` clause is the simplect deduplication tool.
+The `DISTINCT` clause is the most straightforward deduplication tool.
 
-When added to the `SELECT` statement, it will check all available values and leave only unique ones.
+When added to the `SELECT` statement, it will check all available values and leave unique ones.
 
 ```sql {1} title="Unique domains in your database sorted alphabetically"
 SELECT DISTINCT
@@ -418,7 +418,7 @@ SELECT DISTINCT
 ORDER BY Domain
 ```
 
-It's perfect for single column deduplication, however, when you apply it to a select with multiple columns it will leverage all of them for deduplication.
+It's perfect for single-column deduplication. However, when you apply it to a select with multiple columns, it will leverage all of them for deduplication.
 
 ```sql {1} title="One row for each SubscriberKey - Domain pair, sorted alphabetically by domain"
 SELECT DISTINCT
@@ -427,7 +427,7 @@ SELECT DISTINCT
 ORDER BY Domain
 ```
 
-In the above case you will get separate row for each Subscriber Key - Domain pair. It means that you might receive multiple rows with the same Subscriber Key (but each with different Domain). And you will certainly see multiple rows with the same domain (but each with different Subscriber key).
+In the above case,you will get a separate row for each Subscriber Key - Domain pair. It means that you might receive multiple rows with the same Subscriber Key (but each with a different Domain). And you will undoubtedly see numerous rows with the same domain (but each with a different Subscriber key).
 
 ## Table Prefixes
 
@@ -443,10 +443,10 @@ I'm covering this topic in-depth in [`JOIN` statement documentation](./sfmc-sql-
 
 ## Flow control
 
-Despite official [SFMC SQL documentation](https://help.salesforce.com/articleView?id=mc_as_sql_reference.htm&type=5) states that it supports the `IF` constructs, I was not able to make it work.
+Despite official [SFMC SQL documentation](https://help.salesforce.com/articleView?id=mc_as_sql_reference.htm&type=5) stating that it supports the `IF` constructs, I could not make it work.
 
 ## Variables & Functions
 
 Unfortunately, SFMC SQL does not support variables.
 
-Fortunately, it does support (selected) functions. Learn more about them in SFMC SQL Functions documentation pages related to [Strings](./sfmc-sql-string-functions.mdx), [Dates](./sfmc-sql-date-functions.mdx), [Numbers](./sfmc-sql-numeric-functions.mdx).
+Fortunately, it does support (selected) functions. Learn more about them in SFMC SQL Functions documentation pages related to [Strings](./sfmc-sql-string-functions.mdx), [Dates](./sfmc-sql-date-functions.mdx), [Numbers](./sfmc-sql-numeric-functions.mdx), [Conversion](./sfmc-sql-conversion-functions.mdx).
